<resources>
    <string name="app_name">MsPos</string>
    <string name="login">LOGIN</string>
    <string name="user_name">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Cart">Cart</string>
    <string name="add_customer">Add Customer</string>
    <string name="delete_customer">Delete</string>
    <string name="sub_total">Subtotal</string>
    <string name="add_cart_discount">Add Cart Discount</string>
    <string name="hold_cart">hold</string>
    <string name="check_out_cart">Check out 0.000 $</string>
    <string name="Total_Product">Total Product:</string>
    <string name="custom_sale">Custom Sale</string>
    <string name="create_customer">Create Customer</string>
    <string name="Search">Search</string>
    <string name="Cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address1">Addres Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="choose_province">Please select state or provice</string>
    <string name="company">Company</string>
    <string name="Fax">Fax</string>
    <string name="VATID">Vat ID</string>
    <string name="order_comment">Order Comment:</string>
    <string name="name">Name</string>
    <string name="shippable">Shippable</string>
    <string name="Price">Price</string>
    <string name="price_dollar">0.00$</string>
    <string name="TaxclassId">Tax Class Id</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="discount_max">Discount-Maximum 100%</string>
    <string name="remove_discount">Remove Discount</string>
    <string name="apply">Apply</string>
    <string name="custom_discount">Custom Discount</string>
    <string name="discount_type">Discount Type</string>
    <string name="amount">Amount</string>
    <string name="discount_code">Discount Code</string>
    <string name="CouponCode">Coupon Code</string>
    <string name="amount_discount">0.00</string>
    <string name="tax">10%</string>
    <string name="title_tax">Tax</string>
    <string name="custom_price">Custom Price</string>
    <string name="discount">Discount</string>
    <string name="option">Options</string>
    <string name="done">Done</string>
    <string name="type">Type</string>

    <string-array name="object_array">

        <item>All Categories</item>

        <item>Women</item>

        <item>Men</item>

        <item>Accessories</item>

        <item>Home &amp; Decor</item>

        <item>Sale</item>

        <item>Vip</item>



    </string-array>
</resources>
