<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">
    <RelativeLayout
        android:id="@+id/layout_header_cart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_header_cart_height"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/img_delete_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/clear"/>
        <TextView
            android:id="@+id/text_view_product_in_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Cart"
            android:textColor="@android:color/white"/>
        <ImageView
            android:id="@+id/img_comment_cart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/order_comment"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_customer_cart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_customer_height"
        android:background="@android:color/white"
        android:padding="@dimen/layout_customer_checkout_padding"
        >
        <ImageView
            android:id="@+id/img_user_cart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/user"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/information_user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@id/img_user_cart"
            android:text="@string/add_customer"
            android:layout_centerVertical="true"
            android:gravity="center"/>
        <Button
            android:id="@+id/button_delete_customer_cart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/delete_customer"
            android:background="@android:color/holo_red_dark"
            android:layout_margin="@dimen/button_delete_margin"
            android:visibility="gone"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
    <ListView
        android:id="@+id/recycle_view_product_in_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:padding="@dimen/layout_customer_checkout_padding">
    </ListView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_customer_height"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:padding="@dimen/layout_customer_checkout_padding"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sub_total"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sub_total"
            android:layout_alignParentRight="true"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_add_cart_discount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_customer_height"
        android:background="@color/light_grey"
        android:padding="@dimen/layout_customer_checkout_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_cart_discount"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_Discount_Amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/amount"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:visibility="gone"/>
       <ImageView
           android:id="@+id/button_add_cart_discount"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:src="@drawable/add_plus"
           android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_customer_checkout_height"
        android:background="@android:color/white"
        android:padding="@dimen/layout_customer_checkout_padding">
        <Button
            android:id="@+id/button_hold_cart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@string/hold_cart"
            android:textColor="@android:color/white"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/colorPrimary"
            android:text="@string/check_out_cart"
            android:textColor="@android:color/white"/>
    </RelativeLayout>



</LinearLayout>