<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/text_view_title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_title_login"
        android:text="@string/user_name"
        android:layout_marginTop="@dimen/fragment_login_user_margin_top"
        android:layout_marginLeft="@dimen/fragment_login_user_margin_left"/>
    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_login_user_margin_left"
        android:layout_below="@id/text_view_email"
        />
    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_email"
        android:text="@string/password"
        android:layout_marginLeft="@dimen/fragment_login_user_margin_left"/>
    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_login_user_margin_left"
        android:layout_below="@id/text_view_password"
        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_password"
        android:layout_centerHorizontal="true"
        android:text="@string/login"/>

</RelativeLayout>