<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_header_cart_height"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/textview_discountMax"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/discount_max"
                android:gravity="center"
                android:textColor="@android:color/white"/>
            <Button
                android:id="@+id/button_remove_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_discount"
                android:layout_centerVertical="true"
                android:visibility="gone"/>
            <Button
                android:id="@+id/button_apply_discount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@android:color/holo_red_dark"
                android:text="@string/apply"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_header_cart_height">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/CouponCode"
                android:gravity="center"/>
            <EditText
                android:id="@+id/editTextCouponCode"
                android:layout_width="@dimen/customSaleEditNameWidth"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_header_cart_height">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:gravity="center"/>
            <EditText
                android:id="@+id/custom_discount_name"
                android:layout_width="@dimen/customSaleEditNameWidth"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:hint="@string/custom_discount"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_header_cart_height">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/discount_type"
                android:gravity="center"/>
            <Switch
                android:id="@+id/switch_type"
                android:layout_width="@dimen/customSaleEditNameWidth"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="$"
                android:gravity="right|center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_header_cart_height">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/amount"
                android:gravity="center"/>
            <EditText
                android:id="@+id/textview_amount_discount"
                android:layout_width="@dimen/customSaleEditNameWidth"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:hint="@string/price_dollar"
                android:gravity="right|center"
                android:textStyle="bold"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_number_one_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"/>
            <Button
                android:id="@+id/button_number_two_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2"/>
            <Button
                android:id="@+id/button_number_three_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_number_four_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4"/>
            <Button
                android:id="@+id/button_number_five_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5"/>
            <Button
                android:id="@+id/button_number_six_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="6"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_number_seven_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="7"/>
            <Button
                android:id="@+id/button_number_eight_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="8"/>
            <Button
                android:id="@+id/button_number_nine_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="9"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button_backspace_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:src="@drawable/clear_number"
                />
            <Button
                android:id="@+id/button_number_zero_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"/>
            <Button
                android:id="@+id/button_number_double_zero_custom_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>