<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_dialog_discount">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_header_cart_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:gravity="center"/>
        <EditText
            android:id="@+id/editTextNameCustomSale"
            android:layout_width="@dimen/customSaleEditNameWidth"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:hint="@string/custom_sale"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_header_cart_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/shippable"
            android:gravity="center"/>
        <Switch
            android:id="@+id/switch_shippable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_header_cart_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Price"
            android:gravity="center" />
        <TextView
            android:id="@+id/price_custom_sale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/price_dollar"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/price_custom_sale_size"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_header_cart_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/TaxclassId"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/spinner_tax_id"
            android:layout_width="@dimen/customSaleEditNameWidth"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">
        </Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_header_cart_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quantity"
            android:gravity="center"/>
        <EditText
            android:id="@+id/editTextQuantityCustomSale"
            android:layout_width="@dimen/customSaleEditNameWidth"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:hint="0"
            android:gravity="center|right"
            android:textStyle="bold"
            android:textSize="@dimen/price_custom_sale_size"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_number_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"/>
        <Button
            android:id="@+id/button_number_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2"/>
        <Button
            android:id="@+id/button_number_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_number_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4"/>
        <Button
            android:id="@+id/button_number_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5"/>
        <Button
            android:id="@+id/button_number_six"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="6"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_number_seven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="7"/>
        <Button
            android:id="@+id/button_number_eight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="8"/>
        <Button
            android:id="@+id/button_number_nine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="9"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/button_backspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:src="@drawable/clear_number"
            />
        <Button
            android:id="@+id/button_number_zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"/>
        <Button
            android:id="@+id/button_number_double_zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="00"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_add_to_cart_custom_sale"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_header_cart_height"
        android:background="@drawable/button_create_customer"
        android:text="@string/add_to_cart"
        android:textColor="@android:color/white"/>
</LinearLayout>
    </ScrollView>